new css and html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title></title>
   </head>
   <body>
-    <video id="video" src="" autoplay poster="">
+<header id="nasa">
+<h1>Enter in a date and get Nasa's picture of the day</h1>
+</header>    
+<video id="video" src="" autoplay poster="">
 
     </video>
     <img id="img" src="" alt="">
